What: 1. Role based authorization, 2. Controllers and Service for: Customer, Restaurant, Menu and Placed Orders.
Why: Normal Customers should not be able to hit the unauthotrised APIs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
+jwt.secret=yourSecretKeyHere
 
 #server.port= 9000
